--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-<app-header></app-header>
+<app-header *ngIf="showHead"></app-header>
   <router-outlet></router-outlet>
 </div>
