--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,76 @@
 header {
   outline: 1px solid black;
-  background-color: grey;
+  background-color: #008CBA;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+ul {
+  text-align: center;
+  display: flex;
+}
+
+button {
+  margin: 5px;
+  text-align: center;
+  width: auto;
+  background-color: white;
+}
+
+button:hover {
+  background-color: #008CBA;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+mat-select {
+  width: auto;
+}
+
+.logout-button {
+  margin-right: 25px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  width: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+
+  button {
+    background-color: #f1f1f1;
+    width: 120px;
+  }
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+
+  button:hover {
+    background-color: #008CBA;
+    color: white;
+  }
+}
+
+.dropdown:hover .drop-btn {
+  background-color: #008CBA;
+  color: white;
 }
