--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,3 +1,4 @@
+<h3>Search for users</h3>
 <form [formGroup]="searchUserForm">
   <label for="userId">User ID</label>
   <input id="userId" type="text" formControlName="userId">
@@ -7,24 +8,26 @@
   <input id="lastname" type="text" formControlName="lastName">
 </form>
 
-<div fxLayout="row">
-  <p>User ID</p>
-  <p>First Name</p>
-  <p>Last Name</p>
-  <p>Active</p>
+
+
+<div>
+  <table>
+    <th>User ID</th>
+    <th>First name</th>
+    <th>Last name</th>
+    <th>Active</th>
+    <th>Edit user</th>
+<tr *ngFor="let user of this.users$ | async">
+    <td>{{user.userId}} .</td>
+    <td>{{user.firstName}} .</td>
+    <td>{{user.lastName}} .</td>
+    <td *ngIf="user.active">
+      Active</td>
+    <td *ngIf="!user.active">
+      Suspended</td>
+    <td><button class="edit-button" (click)="editUser(user)">Edit details</button></td>
+  </tr>
+  </table>
 </div>
-<div *ngFor="let user of this.users$ | async">
-  <div fxLayout="row">
-    <p>{{user.userId}} .</p>
-    <p>{{user.firstName}} .</p>
-    <p>{{user.lastName}} .</p>
-    <div *ngIf="user.active">
-      <p>active</p>
-    </div>
-    <div *ngIf="!user.active">
-      <p>suspended</p>
-    </div>
-    <button (click)="editUser(user)">edit</button>
-  </div>
-</div>
+
 
