--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -1,12 +1,20 @@
 mat-card {
   width: 200px;
   margin-top: 80px;
+  border: 1px solid #008CBA;
+  box-shadow: 0 4px 10px -6px #222;
+
 }
 .today {
   text-align: center;
   margin-top: 10px;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: #008CBA;
+  color: white;
+  box-shadow: 0 4px 10px -6px #222;
 }
 
 ::ng-deep .mat-calendar-body-selected {
-  background-color: orange;
+  background-color: #008CBA;
 }
