--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
         </div>
-        <button class="book-button" [disabled]="selected == undefined" (click)="placeReservation()">Book the desk</button>  
+        <button class="book-button" [disabled]="selected == undefined" (click)="placeReservation()">Book desk</button>  
         <button class="cancel-button" onclick="window.history.back()">Cancel</button>
     </div>  
 
