--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -8,9 +8,17 @@ div {
   margin: 20px 20px 20px 20px;
 }
 
+::ng-deep .one-day-selector{
+  border-radius: 7px;
+  border: 1px solid #008CBA;
+  color:#008CBA;
+  background-color: white;
+}
+
+
 ::ng-deep .one-day-selector:hover {
-  background-color: orange;
-  border-radius: 5px;
+  background-color: #008CBA;
+  color:white;
 }
 
 .one-day-selector {
@@ -34,53 +42,56 @@ img {
   margin-top: 30px;
 }
 
-.book-button {
-  width: 100px;
+.cancel-button, .book-button {
+  width: 120px;
   height: 50px;
-  margin: 20px 20px 20px 20px;
+  margin: 20px;
   position: fixed;
-  right: 300px;
   bottom: 0;
-  background-color: rgb(175, 169, 169);
-  color: black;
+  background-color: #008CBA;
+  color: white;
+  font-size: large;
   border-radius: 5px;
   border: 1px solid #9999994b;
+  box-shadow: 0 4px 10px -6px #222;
+
+}
+
+.cancel-button {
+    right: 440px;
+}
+
+.book-button {
+    right: 300px;
 }
 
 .book-button:disabled {
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+  cursor: not-allowed;
 }
 
 .book-button:hover:enabled, .cancel-button:hover {
-  border: 2px solid grey;
-  background-color: orange;
-  color: black;
+  border: 6px solid #1080a5b8;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);}
+
+.book-button:active, .cancel-button:active {
+    transform: translateY(3px);
 }
-.cancel-button {
-  width: 100px;
-  height: 50px;
-  margin: 20px 20px 20px 20px;
-  position: fixed;
-  right: 420px;
-  bottom: 0;
-  background-color: rgb(175, 169, 169);
-  color: black;
-  border-radius: 5px;
-  border: 1px solid #9999994b;
-}
+
 
 ::ng-deep
   .mat-checkbox-checked.mat-accent
   .mat-checkbox-ripple
   .mat-ripple-element {
   opacity: 0.03 !important;
-  background-color: orange;
+  background-color: #008CBA;
 }
 
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
 .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-  background-color: orange;
+  background-color:#008CBA;
 }
+
 
