--- a/src/app/components/forms/add-desks-form/add-desks-form.component.html
+++ b/src/app/components/forms/add-desks-form/add-desks-form.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
   <mat-label>Desk number</mat-label>
-  <input id="userid" [formControl]="deskNumber" matInput formControlName="userId">
+  <input id="userid" [formControl]="deskName" matInput formControlName="userId">
   <button mat-button (click)="addNewDesk()">add desk</button>
   <button mat-button (click)="cancel.emit()">cancel</button>
 </mat-form-field>
