--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -16,7 +16,7 @@
             <mat-checkbox [disabled]="!desk.available" (mouseover)="displayReservationInfo=false; hoverId = desk.id" (mouseout)="displayReservationInfo=true;"
                           [checked]="desk.id == currentReservation?.deskId || desk.id == selected"
                           (change)="validateClick(desk.id)"
-            >{{desk!.deskNumber}}</mat-checkbox>
+            >{{desk!.deskName}}</mat-checkbox>
             <div *ngIf="displayReservationInfo && desk.id == hoverId">
               {{desk?.info?.userFirstName}}
             </div>
