--- a/src/app/components/booking-messages/booking-messages.component.html
+++ b/src/app/components/booking-messages/booking-messages.component.html
@@ -6,7 +6,7 @@
 <ng-template #reservationExists>
   <div class="container" mat-dialog-content >
     <p>you already have reservation on {{currentReservation?.date}}, cancel this reservation on desk number
-      {{currentReservation?.deskNumber}} on {{currentReservation?.deskNumber}} ?</p>
+      {{currentReservation?.deskName}} on {{currentReservation?.deskName}} ?</p>
     <button mat-button (click)="inputIdToCancelButton(currentReservation!.reservationId)">cancel reservation</button>
     <button mat-button (click)="keepReservationButtonClickEvent()">keep reservation</button>
   </div>
@@ -18,7 +18,7 @@
     <p>Reservation successful</p>
     <p>date: {{currentReservation.date}}</p>
     <p>Room: {{currentReservation.roomName}}</p>
-    <p>Desk number: {{currentReservation.deskNumber}}</p>
+    <p>Desk number: {{currentReservation.deskName}}</p>
     <button mat-button (click)="okClicked.emit()">OKAY</button>
   </div>
 </ng-template>
