--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -43,14 +43,14 @@ img {
 }
 
 .cancel-button, .book-button {
-  width: 120px;
-  height: 50px;
+  width: 100px;
+  height: 40px;
   margin: 20px;
   position: fixed;
   bottom: 0;
   background-color: #008CBA;
   color: white;
-  font-size: large;
+  font-size:medium;
   border-radius: 5px;
   border: 1px solid #9999994b;
   box-shadow: 0 4px 10px -6px #222;
