--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,7 @@
                         </div>
                     </div>
                 </div>
+                <button mat-button (click)="changePassword()">Change password</button>
                 <button class="logout-button" mat-raised-button (click)="logout()">LOGOUT</button>
             </ul>
         </nav>
