--- a/src/app/components/manage-desks/manage-desks.component.html
+++ b/src/app/components/manage-desks/manage-desks.component.html
@@ -1,33 +1,81 @@
-<div *ngFor="let room of listOfRooms"
-      [ngSwitch]="( room === selectedRoom )">
-  <app-click-to-edit
-    *ngSwitchCase="true"
-    [value]="room.roomName"
-  (valueChangeEvents)="changeRoomName($event)"
-    (cancelEvents)="selectedRoom=null"
-  ></app-click-to-edit>
 
-  <div *ngSwitchCase="false" (click)="selectedRoom = room">
-    {{ room.roomName }}
-  </div>
 
-  <button mat-button (click)="deleteRoom(room.roomId)">delete room</button>
-  <div *ngFor="let desk of room.desks" fxLayout="row"
-       [ngSwitch]="( desk === selectedDesk )">
+<div *ngIf="display === Entities.BUILDINGS; then displayBuildings"></div>
+<div *ngIf="display === Entities.FLOORS; then displayFloors"></div>
+<div *ngIf="display === Entities.ROOMS; then displayRooms"></div>
+
+
+<ng-template #displayBuildings>
+  <div *ngFor="let building of buildings!" fxLayout="row"
+       [ngSwitch]="( building === selectedBuilding )">
     <app-click-to-edit
       *ngSwitchCase="true"
-      [value]="desk.deskName"
-      (valueChangeEvents)="changeDeskName($event)"
-      (cancelEvents)="selectedDesk=null"
+      [value]="building.buildingName!"
+      (valueChangeEvents)="changeBuildingName($event)"
+      (cancelEvents)="selectedBuilding=null"
     ></app-click-to-edit>
 
-    <div *ngSwitchCase="false" (click)="selectedDesk = desk">
-      {{ desk.deskName }}
+    <div *ngSwitchCase="false" (click)="selectedBuilding = building">
+      {{ building.buildingName! }}
+    </div>
+    <button (click)="selectBuilding(building)">select building</button>
+    <button >delete building</button>
+  </div>
+</ng-template>
+
+<ng-template #displayFloors>
+  <div *ngFor="let floor of floors!" fxLayout="row"
+       [ngSwitch]="( floor === selectedFloor )">
+    <app-click-to-edit
+      *ngSwitchCase="true"
+      [value]="floor.buildingName!"
+      (valueChangeEvents)="changeBuildingName($event)"
+      (cancelEvents)="selectedBuilding=null"
+    ></app-click-to-edit>
+
+    <div *ngSwitchCase="false" (click)="selectedFloor = floor">
+      {{ floor.buildingName! }}
+    </div>
+    <button (click)="selectFloor(floor)">select building</button>
+    <button >delete building</button>
+  </div>
+</ng-template>
+
+<ng-template #displayRooms>
+  <div *ngFor="let room of listOfRooms"
+       [ngSwitch]="( room === selectedRoom )">
+    <app-click-to-edit
+      *ngSwitchCase="true"
+      [value]="room.roomName"
+      (valueChangeEvents)="changeRoomName($event)"
+      (cancelEvents)="selectedRoom=null"
+    ></app-click-to-edit>
+
+    <div *ngSwitchCase="false" (click)="selectedRoom = room">
+      {{ room.roomName }}
     </div>
 
-    <button mat-button (click)="deleteDesk(desk.id)">delete desk</button>
+    <button mat-button (click)="deleteRoom(room.roomId)">delete room</button>
+    <div *ngFor="let desk of room.desks" fxLayout="row"
+         [ngSwitch]="( desk === selectedDesk )">
+      <app-click-to-edit
+        *ngSwitchCase="true"
+        [value]="desk.deskName"
+        (valueChangeEvents)="changeDeskName($event)"
+        (cancelEvents)="selectedDesk=null"
+      ></app-click-to-edit>
+
+      <div *ngSwitchCase="false" (click)="selectedDesk = desk">
+        {{ desk.deskName }}
+      </div>
+
+      <button mat-button (click)="deleteDesk(desk.id)">delete desk</button>
+    </div>
+    <button mat-button (click)="addTable(room.roomId)">Add desk</button>
   </div>
-  <button mat-button (click)="addTable(room.roomId)">Add desk</button>
-</div>
-<button mat-button (click)="addRoom()">Add room</button>
+  <button mat-button (click)="addRoom()">Add room</button>
+</ng-template>
+
+
+
 
