--- a/src/app/components/click-to-edit/click-to-edit.component.html
+++ b/src/app/components/click-to-edit/click-to-edit.component.html
@@ -6,6 +6,7 @@
   (keydown.enter)="processChanges()"
   (keydown.meta.enter)="processChanges()"
   (keydown.escape)="cancel()"
+  (keydown.meta.escape)="cancel()"
 />
 <button (click)="processChanges()">
   Save
