--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -1,4 +1,5 @@
- <form [formGroup]="changePasswordForm">
+<div class="container">
+<form [formGroup]="changePasswordForm">
     <mat-form-field>
       <mat-label>Current password</mat-label>
       <input id="currentPassword" matInput formControlName="currentPassword">
@@ -8,7 +9,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>new password</mat-label>
+      <mat-label>New password</mat-label>
       <input id="newPassword" matInput formControlName="newPassword">
       <mat-error *ngIf="getNewPassword?.errors?.['required']">
         new password field is required
@@ -16,15 +17,16 @@
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>new password repeat</mat-label>
+      <mat-label>Repeat new password</mat-label>
       <input id="newPasswordRepeat" matInput formControlName="newPasswordRepeat">
       <mat-error *ngIf="getNewPasswordRepeat?.errors?.['required']">
         current password repeat field is required
       </mat-error>
     </mat-form-field>
 
-   <button (click)="changePasswordRequest()" mat-button>change password</button>
-   <button (click)="cancel.emit()" mat-button>cancel</button>
-
+   <button class="cancel-button" (click)="cancel.emit()" mat-button>Cancel</button>
+   <button class="save-button" (click)="changePasswordRequest()" mat-button>Change password</button>
   </form>
+
+  </div>
 
