--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,17 @@
   width: 1200px;
   margin: 0 auto;
 }
+
+
+::ng-deep
+  .mat-checkbox-checked.mat-accent
+  .mat-checkbox-ripple
+  .mat-ripple-element {
+  opacity: 0.03 !important;
+  background-color: #008CBA;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+  background-color:#008CBA;
+}
