--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -73,25 +73,11 @@ img {
 }
 
 .book-button:hover:enabled, .cancel-button:hover {
-  border: 6px solid #1080a5b8;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);}
+  border: 3px solid #1080a5b8;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
 
 .book-button:active, .cancel-button:active {
     transform: translateY(3px);
 }
-
-
-::ng-deep
-  .mat-checkbox-checked.mat-accent
-  .mat-checkbox-ripple
-  .mat-ripple-element {
-  opacity: 0.03 !important;
-  background-color: #008CBA;
-}
-
-::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
-.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-  background-color:#008CBA;
-}
-
-
