--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -1,6 +1,6 @@
 
 <h3>Current Building: {{floor.buildingName}}</h3>
-<h3>Current Floor: {{floor.floorNumber}}</h3>
+<h3>Current Floor: {{floor.floorName}}</h3>
 <button mat-button (click)="changeFloor()">Change floor</button>
 <div fxLayout="row" >
 
