--- a/src/app/components/modals/change-place-dialog/change-place-dialog.component.html
+++ b/src/app/components/modals/change-place-dialog/change-place-dialog.component.html
@@ -1,6 +1,8 @@
 <div mat-dialog-content fxLayout="column">
   <app-select-floor
+    [floor]="data.floorInject"
     (changeFloor)="changeSelectedFloor($event)"
-    (cancelClicked)="closeForm()"></app-select-floor>
+    (cancelClicked)="closeForm()">]
+  </app-select-floor>
 </div>
 
