login color changed to blue

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
         Please enter your password
       </mat-error>
     </mat-form-field>
-    <button class="login-buttons" mat-raised-button color="primary" (click)="login()">Login</button>
+    <button class="login-buttons" mat-raised-button (click)="login()">Login</button>
     <button class="login-buttons" mat-raised-button (click)="resetForm()">Cancel</button>
   </form>
   <p>In case you faced login issues, please contact <a href="app.support@corporate.com">app.support@corporate.com</a>
