--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,5 @@
 .container {
-  border: 1px solid black;
+  border: 1px solid #008cba;
   width: 768px;
   margin: 30px;
   padding: 10px 100px;
@@ -29,4 +29,19 @@ h1 {
 p {
   margin: 15px;
   text-align: right;
+}
+
+button  {
+  background-color: #008cba;
+  color: white;
+}
+
+button:hover {
+  border: 3px solid #1080a5b8;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+button:active {
+  transform: translateY(3px);
 }
