--- a/src/app/components/manage-desks/manage-desks.component.html
+++ b/src/app/components/manage-desks/manage-desks.component.html
@@ -32,7 +32,7 @@
     <app-click-to-edit
       *ngSwitchCase="true"
       [value]="floor.floorName!"
-      (valueChangeEvents)="changeBuildingName($event)"
+      (valueChangeEvents)="changeFloorName($event)"
       (cancelEvents)="selectedBuilding=null"
     ></app-click-to-edit>
 
