Resarvation history still in progress

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
             <ul>
                 <button mat-raised-button [routerLink]="'/home'">Home</button>
                 <button mat-raised-button [routerLink]="'/reservations'">Reservations</button>
-                <button mat-raised-button [routerLink]="'/history'">History</button>
+                <button mat-raised-button [routerLink]="'/history'">My bookings</button>
                 <div *ngIf="isAdmin">
                     <div class="dropdown">
                         <button mat-raised-button class="drop-btn">Administrate</button>
