--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,7 @@
                             <button mat-button (click)="addUser()">Add new user</button>
                             <button mat-button [routerLink]="'/edit'">Edit user info</button>
                             <button mat-button [routerLink]="'/desk-manage'">Manage Desks</button>
+                            <button mat-button (click)="sendNotification()">Send notification</button>
                         </div>
                     </div>
                 </div>
