--- a/src/app/components/forms/add-desks-form/add-desks-form.component.html
+++ b/src/app/components/forms/add-desks-form/add-desks-form.component.html
@@ -2,6 +2,6 @@
   <mat-label>Desk number</mat-label>
   <input id="userid" [formControl]="deskName" matInput formControlName="userId">
   <button mat-button (click)="addNewDesk()">add desk</button>
-  <button mat-button (click)="cancel.emit()">cancel</button>
+  <button mat-button (click)="closeForm()">cancel</button>
 </mat-form-field>
 
