--- a/src/app/components/forms/add-new-floor/add-new-floor.component.html
+++ b/src/app/components/forms/add-new-floor/add-new-floor.component.html
@@ -17,6 +17,6 @@
 
 
   <button (click)="addNewFloor()" mat-button>Add floor</button>
-  <button (click)="cancel.emit()" mat-button>cancel</button>
+  <button (click)="closeForm()" mat-button>cancel</button>
 
 </form>
