--- a/src/app/components/forms/add-new-room/add-new-room.component.html
+++ b/src/app/components/forms/add-new-room/add-new-room.component.html
@@ -2,6 +2,6 @@
   <mat-label>Room Name</mat-label>
   <input id="userid" [formControl]="roomName" matInput formControlName="userId">
   <button mat-button (click)="addNewRoom()">add room</button>
-  <button mat-button (click)="cancel.emit()">cancel</button>
+  <button mat-button (click)="closeForm()">cancel</button>
 </mat-form-field>
 
