--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -24,7 +24,7 @@
       </mat-error>
     </mat-form-field>
 
-   <button class="cancel-button" (click)="cancel.emit()" mat-button>Cancel</button>
+   <button class="cancel-button" (click)="closeDialog()" mat-button>Cancel</button>
    <button class="save-button" (click)="changePasswordRequest()" mat-button>Change password</button>
   </form>
 
