--- a/src/app/components/forms/add-new-building/add-new-building.component.html
+++ b/src/app/components/forms/add-new-building/add-new-building.component.html
@@ -32,7 +32,7 @@
   </mat-form-field>
 
   <button (click)="addNewBuilding()" mat-button>Add Building</button>
-  <button (click)="cancel.emit()" mat-button>cancel</button>
+  <button (click)="closeForm()" mat-button>cancel</button>
 
 </form>
 
