--- a/src/app/components/forms/add-new-floor/add-new-floor.component.html
+++ b/src/app/components/forms/add-new-floor/add-new-floor.component.html
@@ -7,12 +7,21 @@
     </mat-error>
   </mat-form-field>
 
+
+
   <mat-form-field>
     <mat-label>Enter floor number</mat-label>
     <input id="newPassword" matInput formControlName="newPassword">
     <mat-error *ngIf="getFloorNumber?.errors?.['required']">
       Floor number is required
     </mat-error>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Department</mat-label>
+    <mat-select formControlName="department">
+      <mat-option *ngFor="let department of departments" [value]="department">{{department}}</mat-option>
+    </mat-select>
   </mat-form-field>
 
 
